--- a/html/notes/notes.html
+++ b/html/notes/notes.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Notes. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="High quality handmade GCSE/A-Level notes completely free!
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
+
     <link rel="stylesheet" href="../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -66,7 +70,7 @@
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" title="test"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio1.jpg)" title="test"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
@@ -76,7 +80,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio2.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
@@ -86,7 +90,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
@@ -96,7 +100,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio4.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
@@ -106,7 +110,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio5.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio5.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="notes_content/FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a>
@@ -116,7 +120,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio6.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio6.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
@@ -126,7 +130,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio7.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio7.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a> -->
@@ -136,7 +140,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio8.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio8.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a> -->
@@ -146,7 +150,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio9.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio9.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a> -->
@@ -156,7 +160,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio10.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio10.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="notes_content/CurrentLegislation.html">Current Legislation</a>
@@ -166,7 +170,7 @@
                 </div>
                 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio11.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio11.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\CurrentLegislation.html">Current Legislation</a> -->
@@ -176,7 +180,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio12.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio12.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="notes_content/FurtherProcessesAndTechniques.html">Further Processes and Techniques</a>
@@ -186,7 +190,7 @@
                 </div>
                 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio13.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(../../images/portfolio13.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="notes_content/MathematicsForD&T.html">Mathematics for D&T</a>
