--- a/html/notes/notes_content/DesigningForMaintenanceAndTheCleanerEnvironment.html
+++ b/html/notes/notes_content/DesigningForMaintenanceAndTheCleanerEnvironment.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Designing for Maintenance and the Cleaner Environment. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Designing for Maintenance and the Cleaner Environment.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
+
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +73,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_ProductLifeCycle.pdf">Product Life Cycle</a>
+                            <a href="..\..\..\documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_ProductLifeCycle.pdf">Product Life Cycle</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +82,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_WiderIssuesCleanerTechnologies.pdf">Wider Issues of Using Cleaner Technologies</a>
+                            <a href="..\..\..\documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_WiderIssuesCleanerTechnologies.pdf">Wider Issues of Using Cleaner Technologies</a>
                         </div>
                     </div>
                 </div>
