--- a/html/notes/notes_content/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/html/notes/notes_content/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Factors Influencing the Development of Products. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Factors Influencing the Development of Products.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +72,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\5. Factors influencing the development of products\DTBase_UserCentredDesign.pdf">User Centred Design</a>
+                            <a href="..\..\..\documents\5. Factors influencing the development of products\DTBase_UserCentredDesign.pdf">User Centred Design</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\5. Factors influencing the development of products\DTBase_Anthropometrics_Ergonomics.pdf">Influence on Design of Anthropometrics and Ergonomics</a>
+                            <a href="..\..\..\documents\5. Factors influencing the development of products\DTBase_Anthropometrics_Ergonomics.pdf">Influence on Design of Anthropometrics and Ergonomics</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +90,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\5. Factors influencing the development of products\DTBase_Aesthetics.pdf">Influence of Aesthetics</a>
+                            <a href="..\..\..\documents\5. Factors influencing the development of products\DTBase_Aesthetics.pdf">Influence of Aesthetics</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +99,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\5. Factors influencing the development of products\DTBase_DesignInfluences_MethodsFigures.pdf">Design Influences Methods and Figures</a>
+                            <a href="..\..\..\documents\5. Factors influencing the development of products\DTBase_DesignInfluences_MethodsFigures.pdf">Design Influences Methods and Figures</a>
                         </div>
                     </div>
                 </div>
