--- a/html/notes/notes_content/FeaturesOfManufacturingIndustries.html
+++ b/html/notes/notes_content/FeaturesOfManufacturingIndustries.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Features of Manufacturing Industries. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Features of Manufacturing Industries.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +72,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_MethodsOfProduction.pdf">Methods of Production</a>
+                            <a href="..\..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_MethodsOfProduction.pdf">Methods of Production</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_QualityMonitoringSystems.pdf">Quality Monitoring Systems</a>
+                            <a href="..\..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_QualityMonitoringSystems.pdf">Quality Monitoring Systems</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +90,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_ModernManufacturingMethodsAndSystems.pdf">Modern Manufacturing Methods and Systems</a>
+                            <a href="..\..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_ModernManufacturingMethodsAndSystems.pdf">Modern Manufacturing Methods and Systems</a>
                         </div>
                     </div>
                 </div>
