--- a/html/notes/notes_content/materialsnotes.html
+++ b/html/notes/notes_content/materialsnotes.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Materials. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Materials.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +72,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Woods.pdf">Woods</a>
+                            <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Woods</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Metals.pdf">Metals</a>
+                            <a href="..\..\..\documents\1. Materials\DTBase_Materials_Metals.pdf">Metals</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +90,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Polymers.pdf">Polymers</a>
+                            <a href="..\..\..\documents\1. Materials\DTBase_Materials_Polymers.pdf">Polymers</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +99,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Composites.pdf">Composites</a>
+                            <a href="..\..\..\documents\1. Materials\DTBase_Materials_Composites.pdf">Composites</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +108,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Metals.pdf">Paper and Boards</a>
+                            <a href="..\..\..\documents\1. Materials\DTBase_Materials_Metals.pdf">Paper and Boards</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +117,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote6.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">textiles</a>
+                            <a href="..\..\..\documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">textiles</a>
                         </div>
                     </div>
                 </div>
@@ -123,7 +126,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio7.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_SmartMaterials.pdf">Smart Materials</a>
+                            <a href="..\..\..\documents\1. Materials\DTBase_Materials_SmartMaterials.pdf">Smart Materials</a>
                         </div>
                     </div>
                 </div>
@@ -132,7 +135,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote7.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_ModernMaterials.pdf">Modern Materials</a>
+                            <a href="..\..\..\documents\1. Materials\DTBase_Materials_ModernMaterials.pdf">Modern Materials</a>
                         </div>
                     </div>
                 </div>
