--- a/html/notes/notes_content/AdoptingSafeWorkingPractices.html
+++ b/html/notes/notes_content/AdoptingSafeWorkingPractices.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Adopting Safe Working Practices. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Adopting Safe Working Practices.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
+
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +73,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio7.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\7. Adopting safe working practices, recognise and react to potential hazards\DTBase_Adopting_safe_working_practices.pdf">Adopting Safe Working Practices</a>
+                            <a href="..\..\..\documents\7. Adopting safe working practices, recognise and react to potential hazards\DTBase_Adopting_safe_working_practices.pdf">Adopting Safe Working Practices</a>
                         </div>
                     </div>
                 </div>
