--- a/html/notes/notes_content/DigitalTechnologies.html
+++ b/html/notes/notes_content/DigitalTechnologies.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Digital Technologies. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Digital Technologies.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
+
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +73,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/Digital_Tech/DigiTech_note_CAD.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\4. Digital technologies\DTBase_DigitalTechnologies_ComputerAidedDesign.pdf">Computer Aided Design</a>
+                            <a href="..\..\..\documents\4. Digital technologies\DTBase_DigitalTechnologies_ComputerAidedDesign.pdf">Computer Aided Design</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +82,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/Digital_Tech/DigiTech_note_CAM.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\4. Digital technologies\DTBase_DigitalTechnologies_ComputerAidedManufacturing_RapidPrototyping.pdf">Computer Aided Manufacturing and Rapid Prototyping</a>
+                            <a href="..\..\..\documents\4. Digital technologies\DTBase_DigitalTechnologies_ComputerAidedManufacturing_RapidPrototyping.pdf">Computer Aided Manufacturing and Rapid Prototyping</a>
                         </div>
                     </div>
                 </div>
