--- a/html/notes/notes_content/FurtherProcessesAndTechniques.html
+++ b/html/notes/notes_content/FurtherProcessesAndTechniques.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Further Processes and Techniques. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Further Processes and Techniques.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +72,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\12. Further processes and techniques\DTBase_ProjectManagementSystems.pdf">Project Management Systems</a>
+                            <a href="..\..\..\documents\12. Further processes and techniques\DTBase_ProjectManagementSystems.pdf">Project Management Systems</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\12. Further processes and techniques\DTBase_Stages_Of_A_Products_Life_Cycle.pdf">Stages of a Product's Life Cycle</a>
+                            <a href="..\..\..\documents\12. Further processes and techniques\DTBase_Stages_Of_A_Products_Life_Cycle.pdf">Stages of a Product's Life Cycle</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +90,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\12. Further processes and techniques\DTBase_Strategies_Techniques_And_Approaches_To_Explore_Create_And_Evaluate_Design_Ideas.pdf">Strategies Techniques and Approaches to Explore Create and Evaluate Design Ideas</a>
+                            <a href="..\..\..\documents\12. Further processes and techniques\DTBase_Strategies_Techniques_And_Approaches_To_Explore_Create_And_Evaluate_Design_Ideas.pdf">Strategies Techniques and Approaches to Explore Create and Evaluate Design Ideas</a>
                         </div>
                     </div>
                 </div>
