--- a/html/notes/notes_content/InformationHandlingModellingAndForwardPlanning.html
+++ b/html/notes/notes_content/InformationHandlingModellingAndForwardPlanning.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Information Handling Modelling and Forward Planning. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Information Handling Modelling and Forward Planning.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +72,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\11. Information handling, modelling and forward planning\DTBase_CollectionCollationAndAnalysisToMakeDecisions.pdf">Collection Collation and Analysis to Make Decisions</a>
+                            <a href="..\..\..\documents\11. Information handling, modelling and forward planning\DTBase_CollectionCollationAndAnalysisToMakeDecisions.pdf">Collection Collation and Analysis to Make Decisions</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\11. Information handling, modelling and forward planning\DTBase_ModellingTheCostingOfProjectsToAchieveOptimumOutcome.pdf">Modelling the Cost of Projects to Achieve Optimum Outcome</a>
+                            <a href="..\..\..\documents\11. Information handling, modelling and forward planning\DTBase_ModellingTheCostingOfProjectsToAchieveOptimumOutcome.pdf">Modelling the Cost of Projects to Achieve Optimum Outcome</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +90,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\11. Information handling, modelling and forward planning\DTBase_PropertyRights.pdf">Property Rights</a>
+                            <a href="..\..\..\documents\11. Information handling, modelling and forward planning\DTBase_PropertyRights.pdf">Property Rights</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +99,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\11. Information handling, modelling and forward planning\DTBase_StandardsForProducts.pdf">Standards for Products</a>
+                            <a href="..\..\..\documents\11. Information handling, modelling and forward planning\DTBase_StandardsForProducts.pdf">Standards for Products</a>
                         </div>
                     </div>
                 </div>
