--- a/html/notes/notes_content/MathematicsForD&T.html
+++ b/html/notes/notes_content/MathematicsForD&T.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Mathematics for D&T. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Mathematics for D&T.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +72,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio13.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\13. Mathematics for D&T\DTBase_MathematicsForDT_Maths.pdf">Mathematics for Design & Technology</a>
+                            <a href="..\..\..\documents\13. Mathematics for D&T\DTBase_MathematicsForDT_Maths.pdf">Mathematics for Design & Technology</a>
                         </div>
                     </div>
                 </div>
