--- a/html/notes/notes_content/PerformanceCharacteristicsOfMaterialsNotes.html
+++ b/html/notes/notes_content/PerformanceCharacteristicsOfMaterialsNotes.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Performance Characteristics of Materials. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Performance Characteristics of Materials.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +72,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/perfcharmat1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\2. Performance characteristics of materials\DTBase_Performance_characteristics_of_materials.pdf">Performance Characteristics of Materials</a>
+                            <a href="..\..\..\documents\2. Performance characteristics of materials\DTBase_Performance_characteristics_of_materials.pdf">Performance Characteristics of Materials</a>
                         </div>
                     </div>
                 </div>
