--- a/html/notes/notes_content/ProcessesTechniquesAndSpecialistTools.html
+++ b/html/notes/notes_content/ProcessesTechniquesAndSpecialistTools.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - High quality hand-made notes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Processes Techniques and Specialist Tools. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Note Topic: Processes Techniques and Specialist Tools.
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -69,7 +72,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_alloy.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Alloying.pdf">Alloying</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Alloying.pdf">Alloying</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_casting.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Casting.pdf">Casting</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Casting.pdf">Casting</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +90,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_design_decisions.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_DesignDecisions.pdf">Design Decisions</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_DesignDecisions.pdf">Design Decisions</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +99,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_finishing.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_FinishingTechniques.pdf">Finishing Techniques</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_FinishingTechniques.pdf">Finishing Techniques</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +108,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_heattreatment.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_HeatTreatments.pdf">Heat Treatments</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_HeatTreatments.pdf">Heat Treatments</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +117,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_joining.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_JoiningTechniques.pdf">Joining Techniques</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_JoiningTechniques.pdf">Joining Techniques</a>
                         </div>
                     </div>
                 </div>
@@ -123,7 +126,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_lamination.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Lamination.pdf">Lamination</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Lamination.pdf">Lamination</a>
                         </div>
                     </div>
                 </div>
@@ -132,7 +135,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_machining.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Machining.pdf">Machining</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Machining.pdf">Machining</a>
                         </div>
                     </div>
                 </div>
@@ -141,7 +144,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_marking_out.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_MarkingOutTechniques.pdf">Marking Out Techniques</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_MarkingOutTechniques.pdf">Marking Out Techniques</a>
                         </div>
                     </div>
                 </div>
@@ -150,7 +153,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_moulding.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Moulding.pdf">Moulding</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Moulding.pdf">Moulding</a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +162,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_printing.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Printing.pdf">Printing</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Printing.pdf">Printing</a>
                         </div>
                     </div>
                 </div>
@@ -168,7 +171,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/PTST/PTST_note_marking_tools.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_SpecialistMarkingTools.pdf">Specialist Marking Tools</a>
+                            <a href="..\..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_SpecialistMarkingTools.pdf">Specialist Marking Tools</a>
                         </div>
                     </div>
                 </div>
