--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - Home page. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Home page. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Revise and learn GCSE/A-Level material for DT. 
+    Find high quality notes, past paper questions, solutions, coursework examples and much more!">
+
     <link rel="stylesheet" href="styles.css"/>
 
 </head>
@@ -92,7 +95,7 @@
                 <h2><hr>Are you looking for an A-level or GCSE Design and Technology tutor?</h2> 
             <div class="tutoring">
                 <p>We have highly experienced tutors with years of experience in teaching to provide high quality, <b>personally tailored 1-to-1 lessons</b> to help you achieve your highest potential!</p>
-                <p>For more information please see the <a class="tutor_btn" href="tutoring.html">Tutoring</a> tab</p>
+                <p>For more information please see the <a class="tutor_btn" href="html/tutoring.html">Tutoring</a> tab</p>
             </div>
         </div>
 
