--- a/index.html
+++ b/index.html
@@ -67,12 +67,22 @@
 
         <div class="index-description">
             <div class="website-introduction">
-                <h2><p>Welcome!</p></h2>
+                <!-- <h2><p>Welcome!</p></h2>
                 <p>DTbase is a <b>completely free</b> website offering the highest quality notes, exam questions, coursework examples to help you pass your GCSEs and A levels!</p>
                 <p>Our experienced tutors have helped hundreds of students over the UK to  to fulfil their academic potential.</p>
-                <p>We hope to provide the best quality content so you can pass your exams! Please provide any feedback on anything that can be improved or you would like to see.</p>
+                <p>We hope to provide the best quality content so you can pass your exams! Please provide any feedback on anything that can be improved or you would like to see.</p> -->
+                <h1>Welcome to DesignandTechBase</h1>
+                <h3>Your one-stop destination for all your GCSE and A-Level revision needs.</h3>
+                <h3>Our website offers a wide range of free resources including revision materials, exercises and coursework to 
+                    help students excel in their studies. Our mission is to provide students with the tools they need to succeed 
+                    in their exams and our website is designed to make learning accessible to everyone. </h3>
+                <h3>Whether you're looking for support with a specific topic, comprehensive study guide or would like an experienced tutor we've got you covered. 
+                    Our materials are regularly updated to keep pace with the latest curriculum changes, so you can be sure that you're always 
+                    studying with the most current information. </h3>
+                <h3>Boost your grades and achieve your academic goals with DesignandTechbase.</h3> 
+                    <h3>Start your with us revision today!</h3>
             </div>
-            <h2><hr>What we provide:</h2>   
+            <h2><hr>What DTBase provides:</h2>   
             <div class="provideindex">
 
                 <div class = "provideindex_text">
