--- a/html/tutoring.html
+++ b/html/tutoring.html
@@ -2,12 +2,16 @@
 <html>
 <head>
     <title>
-        DTBASE. Design and Technology - High quality 1-to-1 tutoring services. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Tutoring Service. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Highest quality 1-to-1 tutoring services. 
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
+
     <link rel="stylesheet" href="../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -62,18 +66,25 @@
             <div class="about-description">
                 <!--<img class="about-pic" src="images/ws_mugshot.jpg">-->
                 <div class="about-text">
-                    <h2>Our Tutoring Service<br></h2>
+                    <h1>DesignandTechBase Tutoring Service<br></h1>
                     <div class = "about_tutoring_text">
-                        <p>We believe that every child is different, so no two programs will ever be the same.</p>
+                        <!-- <p>We believe that every child is different, so no two programs will ever be the same.</p>
                         <p>Sessions will be <b>tailored</b> to each individual and what they wish to improve.</p>
-                        <p>We have highly experienced tutors with years of experience and thousands of lessons taught under their belt to help you achieve your highest potential!</p>
+                        <p>We have highly experienced tutors with years of experience and thousands of lessons taught under their belt to help you achieve your highest potential!</p> -->
                         <!-- <p>We believe that every child is different, so no two programs will ever be the same.
                         Sessions will be <b>tailored</b> to each individual and what they wish to improve. 
                         We have highly experienced tutors with years of experience and thousands of lessons under their belt in tutoring to help you achieve your highest potential!</p> -->
-                        <p></p>
+                        <!-- <p></p> -->
                         <!--<P>We have taught millions of people all genders, and sexualities (but not gays)</P>-->
-                        <p><br>Contact us to find out more and arrange a first lesson!<br></p>
+                        <!-- <p><br>Contact us to find out more and arrange a first lesson!<br></p> -->
                         <!--<h2>Meet the tutors<br></h2>-->
+                        <h3>Looking for top-quality tuition services to help your child excel in their studies? </h3>
+                        <h3>Look no further than DTBase! </h3>
+                        <h3>Our experienced and qualified tutors provide personalized instruction in a variety of subjects for students of all ages and skill levels. 
+                            Our tailored lesson plans and flexible scheduling options make it easy for your child to get the extra help they need, when they need it. </h3>
+                        <h3>With our proven track record of success, your child will be on the fast track to academic achievement. 
+                            Give your child the gift of a brighter future with our website's tuition services.</h3>
+                        <h3> Sign up today!</h3>
                     </div>
                         <div class="contactmebtn">
                             <a href="contact.html">Contact</a>
