--- a/html/notes/notes.html
+++ b/html/notes/notes.html
@@ -12,6 +12,7 @@
     Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
     solutions, coursework examples and much more!">
 
+    <link rel="shortcut icon" type="image/x-icon" href="../../Favicon.png">
     <link rel="stylesheet" href="../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
