--- a/html/contact.html
+++ b/html/contact.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" type="image/x-icon" href="../Favicon.png">
     <link rel="stylesheet" href="../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
