--- a/html/coursework/coursework.html
+++ b/html/coursework/coursework.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - Coursework exampes. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Coursework. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Real high marking coursework examples completely free!
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
+
+    <link rel="shortcut icon" type="image/x-icon" href="../../Favicon.png">
     <link rel="stylesheet" href="../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
