--- a/html/exercises/exercises.html
+++ b/html/exercises/exercises.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <title>
-        DTBASE. Design and Technology - Past paper questions and solutions. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
+        DTBASE | Design and Technology Revision - Exercises. 
     </title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="High quality handmade GCSE/A-Level exercises completely free!
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
+
+
+    <link rel="shortcut icon" type="image/x-icon" href="../../Favicon.png">
     <link rel="stylesheet" href="../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
