--- a/html/notes/notes_content/ProcessesTechniquesAndSpecialistTools.html
+++ b/html/notes/notes_content/ProcessesTechniquesAndSpecialistTools.html
@@ -11,6 +11,8 @@
     <meta name="description" content="Note Topic: Processes Techniques and Specialist Tools.
     Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
     solutions, coursework examples and much more!">
+    
+    <link rel="shortcut icon" type="image/x-icon" href="../../../Favicon.png">
     <link rel="stylesheet" href="../../../styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
