--- a/html/notes/notes.html
+++ b/html/notes/notes.html
@@ -28,7 +28,7 @@
     <div class="containter">  
         <header>
             <div class="Logo">
-                <img class="logo" src="../../images/Logo.png">
+                <img class="logo" src="../../images/Logo.png" alt="DTBase Logo">
             </div>
             <div class="toggle"></div>
             <div class="navigation">
@@ -62,6 +62,7 @@
                 <div class="nav-link-wrapper">
                     <a href="../contact.html">Contact</a>
                 </div>
+                
             </div>
         </header>
         <div class="quote">
@@ -213,5 +214,5 @@
 
     </div>
 </body>
-<script src="script.js"></script>
+<script src="../../script.js"></script>
 </html>
