--- a/html/notes/notes_content/CurrentLegislation.html
+++ b/html/notes/notes_content/CurrentLegislation.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/consumerRights.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\10. Current legislation\DTBase_CurrentLegislation_ConsumerRightsLegislation.pdf">Consumer Rights Legislation</a>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/healthandsafetylaws.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\10. Current legislation\DTBase_CurrentLegislation_HealthAndSafetyLaws.pdf">Health and Safety Laws</a>
