--- a/html/notes/notes_content/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/html/notes/notes_content/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/userCentreDesign.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\5. Factors influencing the development of products\DTBase_UserCentredDesign.pdf">User Centred Design</a>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/ergonomics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\5. Factors influencing the development of products\DTBase_Anthropometrics_Ergonomics.pdf">Influence on Design of Anthropometrics and Ergonomics</a>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/aesthetics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\5. Factors influencing the development of products\DTBase_Aesthetics.pdf">Influence of Aesthetics</a>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio4.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/designinfluences.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\5. Factors influencing the development of products\DTBase_DesignInfluences_MethodsFigures.pdf">Design Influences Methods and Figures</a>
