--- a/html/notes/notes_content/MathematicsForD&T.html
+++ b/html/notes/notes_content/MathematicsForD&T.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio13.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/mathsforDT.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\13. Mathematics for D&T\DTBase_MathematicsForDT_Maths.pdf">Mathematics for Design & Technology</a>
