--- a/html/notes/notes_content/PerformanceCharacteristicsOfMaterialsNotes.html
+++ b/html/notes/notes_content/PerformanceCharacteristicsOfMaterialsNotes.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/perfcharmat1.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnotecharacteristics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\2. Performance characteristics of materials\DTBase_Performance_characteristics_of_materials.pdf">Performance Characteristics of Materials</a>
