--- a/html/notes/notes_content/materialsnotes.html
+++ b/html/notes/notes_content/materialsnotes.html
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio4.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnoteComposite.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\1. Materials\DTBase_Materials_Composites.pdf">Composites</a>
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio7.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnotesmartMats.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\1. Materials\DTBase_Materials_SmartMaterials.pdf">Smart Materials</a>
