--- a/html/notes/notes_content/AdoptingSafeWorkingPractices.html
+++ b/html/notes/notes_content/AdoptingSafeWorkingPractices.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio7.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/safeWorkingPractice.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\7. Adopting safe working practices, recognise and react to potential hazards\DTBase_Adopting_safe_working_practices.pdf">Adopting Safe Working Practices</a>
