--- a/html/notes/notes_content/DesigningForMaintenanceAndTheCleanerEnvironment.html
+++ b/html/notes/notes_content/DesigningForMaintenanceAndTheCleanerEnvironment.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/productLifeCycle.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_ProductLifeCycle.pdf">Product Life Cycle</a>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/cleanerTech.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_WiderIssuesCleanerTechnologies.pdf">Wider Issues of Using Cleaner Technologies</a>
