--- a/html/notes/notes_content/EffectsOfTechnologicalDevelopments.html
+++ b/html/notes/notes_content/EffectsOfTechnologicalDevelopments.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/effectsoftechdev.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\6. Effects of technological developments\DTBase_Effects_of_technological_developments.pdf">Effects of Technological Developments</a>
