--- a/html/notes/notes_content/FeaturesOfManufacturingIndustries.html
+++ b/html/notes/notes_content/FeaturesOfManufacturingIndustries.html
@@ -71,7 +71,7 @@
             <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote1.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/massproduction.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_MethodsOfProduction.pdf">Methods of Production</a>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/matnote2.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/qualityControl.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_QualityMonitoringSystems.pdf">Quality Monitoring Systems</a>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/modernManufacturingMethods.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_ModernManufacturingMethodsAndSystems.pdf">Modern Manufacturing Methods and Systems</a>
