--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <h2><hr>Are you looking for an A-level or GCSE Design and Technology tutor?</h2> 
             <div class="tutoring">
                 <p>We have highly experienced tutors with years of experience in teaching to provide high quality, <b>personally tailored 1-to-1 lessons</b> to help you achieve your highest potential!</p>
-                <p>For more information please see the <a class="tutor_btn" href="html/tutoring.html">Tutoring</a> tab</p>
+                <span>For more information please see the <div class="tutor_btn"><a href="html/tutoring.html">Tutoring</a></div> tab</span>
             </div>
         </div>
 
