--- a/html/notes/notes_content/AdoptingSafeWorkingPractices.html
+++ b/html/notes/notes_content/AdoptingSafeWorkingPractices.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Safe Working Practices</p>
+            <h2>Safe Working Practices</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
