--- a/html/notes/notes_content/DigitalTechnologies.html
+++ b/html/notes/notes_content/DigitalTechnologies.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Digital Technologies</p>
+            <h2>Digital Technologies</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
