--- a/html/notes/notes_content/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/html/notes/notes_content/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Factors Influencing the Development of Products</p>
+            <h2>Factors Influencing the Development of Products</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
