--- a/html/notes/notes_content/FeaturesOfManufacturingIndustries.html
+++ b/html/notes/notes_content/FeaturesOfManufacturingIndustries.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Features of Manufacturing in Industries</p>
+            <h2>Features of Manufacturing in Industries</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
