--- a/html/notes/notes_content/materialsnotes.html
+++ b/html/notes/notes_content/materialsnotes.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Materials</p>
+            <h2>Materials</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
