--- a/html/notes/notes_content/CurrentLegislation.html
+++ b/html/notes/notes_content/CurrentLegislation.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Current Legislation</p>
+            <h2>Current Legislation</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
