--- a/html/notes/notes_content/DesigningForMaintenanceAndTheCleanerEnvironment.html
+++ b/html/notes/notes_content/DesigningForMaintenanceAndTheCleanerEnvironment.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Designing for Maintenance and the Cleaner Environment</p>
+            <h2>Designing for Maintenance and the Cleaner Environment</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
