--- a/html/notes/notes_content/EffectsOfTechnologicalDevelopments.html
+++ b/html/notes/notes_content/EffectsOfTechnologicalDevelopments.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Effects of Technological Developments</p>
+            <h2>Effects of Technological Developments</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
