--- a/html/notes/notes_content/FurtherProcessesAndTechniques.html
+++ b/html/notes/notes_content/FurtherProcessesAndTechniques.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Further Processes and Techniques</p>
+            <h2>Further Processes and Techniques</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
