--- a/html/notes/notes_content/InformationHandlingModellingAndForwardPlanning.html
+++ b/html/notes/notes_content/InformationHandlingModellingAndForwardPlanning.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Information Handling, Modelling and Forward Planning</p>
+            <h2>Information Handling, Modelling and Forward Planning</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
