--- a/html/notes/notes_content/MathematicsForD&T.html
+++ b/html/notes/notes_content/MathematicsForD&T.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Mathematics</p>
+            <h2>Mathematics</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
