--- a/html/notes/notes_content/PerformanceCharacteristicsOfMaterialsNotes.html
+++ b/html/notes/notes_content/PerformanceCharacteristicsOfMaterialsNotes.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Performance and Characteristics of Materials</p>
+            <h2>Performance and Characteristics of Materials</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
