--- a/html/notes/notes_content/ProcessesTechniquesAndSpecialistTools.html
+++ b/html/notes/notes_content/ProcessesTechniquesAndSpecialistTools.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Processes, Techniques and Specialist Tools</p>
+            <h2>Processes, Techniques and Specialist Tools</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
